--- a/sass/layout/nav.scss
+++ b/sass/layout/nav.scss
@@ -49,7 +49,7 @@
         margin-left: calc(var(--gap) / 1);
       &:last-child {
         a {
-          margin-left: calc(var(--gap) / 2);
+          // margin-left: calc(var(--gap) / 2);
         }
       }
 
